--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "next": "12.3.1",
     "react": "18.2.0",
